--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.68.0",
     "react-i18next": "^16.5.0",
     "react-native": "0.81.5",
+    "react-native-appwrite": "^0.16.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-redux": "^9.2.0",
