--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native-stack": "^7.8.6",
     "@reduxjs/toolkit": "^2.11.1",
     "expo": "~54.0.29",
+    "expo-linking": "^8.0.10",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "^15.0.10",
     "i18next": "^25.7.2",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
