--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-appwrite": "^0.16.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
+    "react-native-svg": "15.12.1",
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.3.2"
   },
